--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "pseudo-translate-file": "src/index.js"
   },
   "scripts": {
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest"
   },
   "author": "Holger König",
   "license": "ISC",
@@ -19,6 +20,7 @@
     "eslint": "8.10.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.25.4",
+    "jest": "^27.5.1",
     "prettier": "2.5.1"
   },
   "dependencies": {}
