--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
   "name": "pseudo-translate-file",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Pseudo Translation Tool",
   "homepage": "https://github.com/holger-koenig/pseudo-translate-file",
   "engines": {
-    "node": ">=14"
+    "node": ">=16"
   },
   "bin": {
-    "pseudo-translate-file": "src/index.js"
+    "pseudo-translate-file": "build/index.js"
   },
   "scripts": {
     "lint": "eslint src/",
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest"
+    "build": "tsc",
+    "test": "npx jest"
   },
   "author": "Holger König",
   "license": "ISC",
-  "type": "module",
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "eslint": "8.14.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.26.0",
     "jest": "27.5.1",
-    "prettier": "2.6.2"
-  },
-  "dependencies": {}
+    "prettier": "2.6.2",
+    "ts-jest": "^27.1.4",
+    "typescript": "^4.6.3"
+  }
 }
