--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   "author": "Holger König",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^27.4.1",
+    "@types/jest": "27.4.1",
     "eslint": "8.14.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.26.0",
     "jest": "27.5.1",
     "prettier": "2.6.2",
-    "ts-jest": "^27.1.4",
-    "typescript": "^4.6.3"
+    "ts-jest": "27.1.4",
+    "typescript": "4.6.3"
   }
 }
